guides/recipes/gateway/ossm/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    istio.io/rev: openshift-gateway
    platform.opendatahub.io/part-of: gatewayconfig
  annotations:
    security.opendatahub.io/enable-auth: 'false'
  name: llm-d-inference-gateway
spec:
  gatewayClassName: data-science-gateway-class
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: rhoai-gateway-config
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: data-science-gateway-service-tls
            namespace: openshift-ingress
        mode: Terminate
